# PAWER

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-deploy.yml  rust.yml
src/: beta.rs  definitions.rs  errors.rs  lib.rs  main.rs  manager.rs  parsing.rs  stdlib.v  typing.rs  utils.rs
src/pest/: grammar.pest
